--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -9,6 +9,6 @@
         android:icon="@drawable/ic_favorite" />
     <item android:id="@+id/searchNewsFragment"
         android:title="Search News"
-        android:icon="@drawable/ic_all_news" />
+        android:icon="@drawable/ic_search_news_24" />
 
 </menu>
