--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.NewsActivity">
+    tools:context=".ui.NewsActivity"
+    android:id="@+id/activityCL">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBar"
@@ -14,13 +15,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.Toolbar
-            style="@style/ArticleBarsTheme"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:menu="@menu/toolbar_menu"
             app:title="@string/app_name"
-            app:titleTextColor="@android:color/white"/>
+            app:titleTextColor="@android:color/white">
+
+            <com.zooro.mvvmnewsapp.ui.custom.CheckableImageView
+                android:id="@+id/btn_settings"
+                style="@style/BottombarIcon"
+                android:src="@drawable/ic_all_news"
+                android:layout_gravity="end" />
+        </com.google.android.material.appbar.MaterialToolbar>
+
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <FrameLayout
@@ -33,7 +42,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBar">
 
-        <fragment
+        <com.zooro.mvvmnewsapp.ui.custom.ArticleSubmenu
+            android:id="@+id/submenu"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_gravity="end"
+            android:elevation="4dp"
+            />
+
+        <androidx.fragment.app.FragmentContainerView
             android:id="@+id/newsHavHostFragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
@@ -54,6 +73,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_behavior="murt.shoppinglistapp.ui.BottomNavigationBehavior"
 
-        />
+        >
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
