--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,12 @@
         <item name="color">@android:color/white</item>
     </style>
 
+    <style name="ToolbarSetting">
+        <item name="android:layout_width">56dp</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:tint">@color/tint_color</item>
+        <item name="android:background">@drawable/ripple</item>
+    </style>
+
 </resources>
