--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -6,43 +6,43 @@
     <fragment
         android:id="@+id/breakingNewsFragment"
         android:name="com.zooro.mvvmnewsapp.ui.fragments.BreakingNewsFragment"
-        android:label="BreakingNewsFragment" >
+        android:label="Breaking News">
         <action
             android:id="@+id/action_breakingNewsFragment_to_articleNewsFragment"
             app:destination="@id/articleNewsFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_in_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_in_right"/>
+            app:popExitAnim="@anim/slide_in_right" />
     </fragment>
     <fragment
         android:id="@+id/searchNewsFragment"
         android:name="com.zooro.mvvmnewsapp.ui.fragments.SearchNewsFragment"
-        android:label="SearchNewsFragment" >
+        android:label="Search News">
         <action
             android:id="@+id/action_searchNewsFragment_to_articleNewsFragment"
             app:destination="@id/articleNewsFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_in_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_in_right"/>
+            app:popExitAnim="@anim/slide_in_right" />
     </fragment>
     <fragment
         android:id="@+id/savedNewsFragment"
         android:name="com.zooro.mvvmnewsapp.ui.fragments.SavedNewsFragment"
-        android:label="SavedNewsFragment" >
+        android:label="Favorite News">
         <action
             android:id="@+id/action_savedNewsFragment_to_articleNewsFragment"
             app:destination="@id/articleNewsFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_in_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_in_right"/>
+            app:popExitAnim="@anim/slide_in_right" />
     </fragment>
     <fragment
         android:id="@+id/articleNewsFragment"
         android:name="com.zooro.mvvmnewsapp.ui.fragments.ArticleNewsFragment"
-        android:label="ArticleNewsFragment" >
+        android:label="News">
         <argument
             android:name="article"
             app:argType="com.zooro.mvvmnewsapp.models.Article" />
