--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,6 +8,7 @@
     <color name="color_on_surface">#BABABA</color>
     <color name="color_gray">#4E545F</color>
     <color name="color_gray_light">#272727</color>
+    <color name="color_title">#BABABA</color>
 
     <color name="color_article_bar">#121212</color>
     <color name="color_on_article_bar">#FFFFFF</color>
