--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -34,6 +34,6 @@
         android:label="News">
         <argument
             android:name="article"
-            app:argType="com.zooro.mvvmnewsapp.models.Article" />
+            app:argType="com.zooro.mvvmnewsapp.data.models.ArticleDto" />
     </fragment>
 </navigation>
