added color attribute

--- a/app/src/main/res/layout/fragment_breaking_news.xml
+++ b/app/src/main/res/layout/fragment_breaking_news.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="?attr/colorSurface">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:swipeRefreshLayoutProgressSpinnerBackgroundColor="?attr/colorPrimaryContainer">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvBreakingNews"
@@ -34,6 +36,8 @@
         android:layout_gravity="center"
         android:visibility="invisible"
         tools:visibility="visible"
-        android:background="@android:color/transparent" />
+        android:background="@android:color/transparent"
+        android:indeterminateTintMode="src_in"
+        android:indeterminateTint="?attr/colorPrimary" />
 
 </FrameLayout>
