--- a/app/src/main/res/layout/no_content.xml
+++ b/app/src/main/res/layout/no_content.xml
@@ -7,7 +7,8 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_gravity="center"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:background="?attr/colorSurface">
 
     <TextView
         android:layout_width="wrap_content"
@@ -18,7 +19,6 @@
         android:textStyle="bold"
         android:padding="16dp"
         android:textColor="@color/color_on_surface"
-        android:background="?attr/selectableItemBackground"
         android:textAllCaps="true"/>
     <FrameLayout
         android:id="@+id/emptyList"
